# dev_kpi_calcuation_platform

./: .dockerignore  .gitignore  Makefile  README.md  log.ini  pyproject.toml  setup.cfg
.github/: release-drafter.yml
.github/bash/: healthcheck.sh  test_event.json
.github/workflows/: cd-internal-deployment.yaml  cd-prod-deployment.yaml  ci-test.yaml
docker/: Dockerfile  docker-compose-local-test.yaml  docker-compose-osrm.yaml
notebooks/: 01_research_global_osrm.ipynb  02_fix_route_distances.ipynb  iss_14_dev_trip_driver.ipynb
src/: environment.py  middleware.py  models.py
src/aws_lambda/kpi/: configs.py  main.py  nodes.py  session.py
src/osrm/: __init__.py  abstract.py  client.py  models.py
src/osrm/driver/: __init__.py  driver.py  mappings.py  models.py
src/osrm/drivers/: __init__.py  models.py  route.py
src/osrm/parsers/: __init__.py  route.py  trip.py
src/tests/: __init__.py  conftest.py  test_models.py
src/tests/aws_lambda/: __init__.py
src/tests/aws_lambda/kpi/: conftest.py  test_main.py  test_nodes.py  test_session.py
src/tests/osrm/: test_client.py
src/tests/osrm/driver/: test_driver.py  test_models.py
terraform/: global.tfvars
terraform/glue/tables/: .terraform.lock.hcl  Makefile  README.md  datasources.tf  main.tf  outputs.tf  version.tf
terraform/lambda/: .terraform.lock.hcl  Makefile  README.md  datasources.tf  main.tf  outputs.tf  variables.tf  version.tf
terraform/shared/ecr/: Makefile  README.md  main.tf  outputs.tf  version.tf
terraform/shared/s3/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  version.tf
(+11 files in other folders)
